fixed: link color and expanded footer so it's more readable

--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 body {
     background-color: black;
     color: white;
-  }
+    
+}
+
+a:link{
+    color: aqua;
+}
